--- a/scripts/install
+++ b/scripts/install
@@ -24,7 +24,7 @@ sudo mkdir -p $final_path
 sudo cp -a ../sources/* $final_path
 
 # Extract default language and timezone that will be provided unless they are by LDAP
-ynh_lang=sudo bash -c "echo $LANG | cut -d '_' -f 1"
+ynh_lang=$(sudo bash -c "echo $LANG | cut -d '_' -f 1")
 sudo sed -i "s@YNH_DFT_LANG@$ynh_lang@g" $final_path/ldap.php
 ynh_timezone=$(cat /etc/timezone)
 sudo sed -i "s@YNH_DFT_TIMEZONE@$ynh_timezone@g" $final_path/ldap.php
